plugins {
    id 'java'
    id 'eclipse'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group 'link.star_dust'
version '1.11.9'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
    maven {
        name = 'SpigotMC'
        url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
    }
    maven {
        name = 'Apache'
        url = 'https://maven.aliyun.com/repository/apache-snapshots'
    }
    maven {
	    name = 'Velocity'
	    url = 'https://repo.papermc.io/repository/maven-public/'
	}
	maven {
        name = 'bStats'
        url = 'https://repo.codemc.org/repository/maven-public/'
    }
	maven {
        name = 'sonatype'
        url = 'https://oss.sonatype.org/content/repositories/snapshots/'
    }
	maven {
	    name = 'md-5'
	    url = 'https://repo.md-5.net/content/repositories/snapshots/'
	}
}

dependencies {
    compileOnly 'org.spigotmc:spigot-api:1.21.4-R0.1-SNAPSHOT'
    compileOnly 'com.velocitypowered:velocity-api:3.0.0-SNAPSHOT'
	compileOnly 'net.md-5:bungeecord-api:1.21-R0.1-SNAPSHOT'
    compileOnly 'org.apache.logging.log4j:log4j-core:2.24.3'
    compileOnly 'org.apache.logging.log4j:log4j-api:2.24.3'
    implementation 'org.spongepowered:configurate-yaml:4.1.2'
    implementation 'org.bstats:bstats-bukkit:3.0.0'
    implementation 'org.bstats:bstats-velocity:3.0.0'
    implementation 'org.bstats:bstats-bungeecord:3.0.0'
    //implementation 'net.kyori:adventure-api:4.14.0'
    //implementation 'net.kyori:adventure-text-minimessage:4.14.0'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

jar {
    manifest {
        attributes(
            'Main-Class': 'link.star_dust.consolefix.CSF',
            'Implementation-Title': project.name,
            'Implementation-Version': project.version
        )
    }
    
    exclude 'META-INF/', 'LICENSE.txt', 'LICENSE', 'org/', 'kotlin/', 'com/', 'net/', 'mojang-translations/', 'javax/', 'module-info.class'

    from {
        configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

shadowJar {
    relocate 'org.bstats', 'link.star_dust.bstats'
    //relocate 'net.kyori', 'link.star_dust.consolefix.velocity.kyori'
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    archiveClassifier.set('')
}

build {
    dependsOn shadowJar
}
